summer-jaeb/tests/compile_fail/method_not_free_fn.stderr
error: #[event_listener] can only be applied to free functions, not methods
  --> tests/compile_fail/method_not_free_fn.rs:14:5
   |
14 |     async fn on_event(self, event: &MyEvent) -> HandlerResult {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `jaeb::HandlerResult`
 --> tests/compile_fail/method_not_free_fn.rs:4:5
  |
4 | use jaeb::HandlerResult;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
